# workflow

./: .gitignore  CLAUDE.md  README.md  learn_path.md  main.py  pyproject.toml
.github/workflows/: pylint.yml  python-app.yml
app/: config.py  main.py  models.py
app/agent/: graph.py  prompts.py  state.py  tools.py
app/api/: chat.py  knowledge_base.py
app/rag/: embeddings.py  ingest.py  retriever.py
app/rag/vector_store/: __init__.py  base.py  chroma_backend.py  factory.py
tests/: TEST_CASES.md  conftest.py  test_chat.py  test_knowledge_base.py
